force-app/main/default/objects/ListingQualityInbound__c/ListingQualityInbound__c.object-meta.xml
<CustomObject>
    <label>Entradas Listing Quality</label>
    <nameField>
        <displayFormat>LQ-{0000000}</displayFormat>
        <label>Entrada Listing Quality</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Entradas Listing Quality</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>