force-app/main/default/objects/ListingQualityInbound__c/fields/AIRejectionCode__c.field-meta.xml
<CustomField>
    <fullName>AIRejectionCode__c</fullName>
    <description>Código de rejeição gerado pela IA de análise de fotos</description>
    <label>Código de Rejeição da IA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>