force-app/main/default/objects/ListingQualityInbound__c/fields/AnalystQueue__c.field-meta.xml
<CustomField>
    <fullName>AnalystQueue__c</fullName>
    <description>Indica a fila de atendimento 0,1 e 2</description>
    <label>Fila do Analista</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>