force-app/main/default/objects/ListingQualityInbound__c/fields/HouseId__c.field-meta.xml
<CustomField>
    <fullName>HouseId__c</fullName>
    <externalId>true</externalId>
    <label>ID do imóvel</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>