force-app/main/default/objects/ListingQualityInbound__c/fields/MagicLinkURL__c.field-meta.xml
<CustomField>
    <fullName>MagicLinkURL__c</fullName>
    <description>Gera o link para a página do imóvel para verificação do motivo da rejeição pela IA</description>
    <formula>HYPERLINK(&apos;http://crm-pwa-imoveis.quintoandar.com.br/imoveis/&apos;+HouseId__c+&apos;/informacoes&apos;, &apos;Link do Imóvel&apos;+&apos; &apos;+&apos;#&apos;+ HouseId__c )</formula>
    <label>MagicLink URL</label>
    <type>Text</type>
</CustomField>